--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,15 @@
 {
 	"name": "project/ecommerce-app",
-	"authors": [{
-		"name": "Abdullah Al Mamun Roni",
-		"email": "md.aamroni@gmail.com",
-		"homepage": "https://aamroni.net",
-		"role": "Web Application Developer"
-	}],
+	"license": "MIT",
+	"description": "Single Vendor E-Commerce Applicton",
+	"authors": [
+		{
+			"name": "Abdullah Al Mamun Roni",
+			"email": "md.aamroni@gmail.com",
+			"homepage": "https://aamroni.net",
+			"role": "Web Application Developer"
+		}
+	],
 	"support": {
 		"email": "info.aamroni@gmail.com"
 	},
@@ -14,5 +18,6 @@
 		"psr-4": {
 			"App\\": "app/"
 		}
-	}
+	},
+	"require-dev": {}
 }
